--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freeradius (3.0.15+qnet1) unstable; urgency=medium
+
+  * Disable rlm_krb5, it conflicts with Samba build scripts
+
+ -- Herwin Weststrate <herwin@quarantainenet.nl>  Thu, 10 Dec 2015 10:32:07 +0100
+
 freeradius (3.0.15+git) unstable; urgency=medium
 
   * New upstream version.
