--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freeradius (3.0.15+qnet3) unstable; urgency=medium
+
+  * Build dependency changes for Debian Stretch
+
+ -- Justin Ossevoort <justin@quarantainenet.nl>  Tue, 18 Jul 2017 10:19:27 +0200
+
 freeradius (3.0.15+qnet2) unstable; urgency=medium
 
   * Compile with winbind libs
