--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freeradius (3.0.15+qnet4) unstable; urgency=medium
+
+  * Ignore freeradius start/stop/reload errors during package updates
+
+ -- Justin Ossevoort (Quarantainenet) <justin@quarantainenet.nl>  Tue, 18 Jul 2017 11:50:47 +0200
+
 freeradius (3.0.15+qnet3) unstable; urgency=medium
 
   * Build dependency changes for Debian Stretch
